Rejigger the project a bit

--- a/test/index.html
+++ b/test/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Corduroy</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="test.css">
   </head>
   <body>
     <p>corduroy</p>
-    <script src="index.js"></script>
+    <script src="test.js"></script>
   </body>
 </html>
 
