--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,48 @@
     <link rel="stylesheet" href="test.css">
   </head>
   <body>
-    <p>corduroy</p>
+    <section role="main">
+      <p class="test-em-default">.test-em-default</p>
+      <p class="test-em-context">.test-em-context</p>
+      <p class="test-rem-default">.test-rem-default</p>
+      <p class="test-rem-context">.test-rem-context</p>
+      <p class="test-shade">.test-shade</p>
+      <p class="test-tint">.test-tint</p>
+      <p class="test-tab-focus">.test-tab-focus</p>
+
+      <div class="test-shapes test-rectangle"></div>
+      <div class="test-shapes test-rectangle-rounded"></div>
+      <div class="test-shapes test-square"></div>
+      <div class="test-shapes test-square-rounded"></div>
+      <div class="test-shapes test-circle"></div>
+      <div class="test-shapes test-oval"></div>
+      <div class="triangles">
+        <div class="test-triangles test-triangle-up"></div>
+        <div class="test-triangles test-triangle-down"></div>
+        <div class="test-triangles test-triangle-left"></div>
+        <div class="test-triangles test-triangle-right"></div>
+        <div class="test-triangles test-triangle-up-left"></div>
+        <div class="test-triangles test-triangle-up-right"></div>
+        <div class="test-triangles test-triangle-down-left"></div>
+        <div class="test-triangles test-triangle-down-right"></div>
+      </div>
+      <div class="triangles">
+        <div class="test-triangles test-triangle-north"></div>
+        <div class="test-triangles test-triangle-south"></div>
+        <div class="test-triangles test-triangle-west"></div>
+        <div class="test-triangles test-triangle-east"></div>
+        <div class="test-triangles test-triangle-north-west"></div>
+        <div class="test-triangles test-triangle-north-east"></div>
+        <div class="test-triangles test-triangle-south-east"></div>
+        <div class="test-triangles test-triangle-south-west"></div>
+      </div>
+      <p>.test-hidden -&gt;<span class="test-hidden">on</span> &lt;- span</p>
+      <p>.test-invisible -&gt;<span class="test-invisible">on</span> &lt;- span</p>
+      <p>.test-visuallyhidden -&gt;<span class="test-visuallyhidden">on</span> &lt;- span</p>
+      <p class="test-image-replacement">.test-image-replacement</p>
+      <input id="toggle" class="test-cbh" type="checkbox">
+      <label for="toggle" onclick>Checkbox Hack</label>
+    </section>
   </body>
 </html>
 
