Revamp and simplify the functions/mixins in use

--- a/test/index.html
+++ b/test/index.html
@@ -45,11 +45,11 @@
         <div class="test-triangles test-triangle-south-west"></div>
       </div>
       <p>.test-hidden -&gt;<span class="test-hidden">on</span> &lt;- span</p>
-      <p>.test-invisible -&gt;<span class="test-invisible">on</span> &lt;- span</p>
+      <p>.test-conceal -&gt;<span class="test-conceal">on</span> &lt;- span</p>
       <p>.test-visuallyhidden -&gt;<span class="test-visuallyhidden">on</span> &lt;- span</p>
+      <input id="toggle" class="test-invisible" type="checkbox">
+      <label for="toggle" onclick>Invisible Checkbox</label>
       <p class="test-image-replacement">.test-image-replacement</p>
-      <input id="toggle" class="test-cbh" type="checkbox">
-      <label for="toggle" onclick>Checkbox Hack</label>
     </section>
   </body>
 </html>
